# advent_2025_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
src/: errors.rs  main.rs
src/day/: _model.rs  common.rs  day_1.rs  day_2.rs  day_3.rs  day_4.rs  mod.rs
src/util/: api.rs
