[package]
name = "advent_2025_rust"
version = "0.1.0"
edition = "2021"

[dependencies]


thiserror = "2.0.5"
regex = "1.1.11"
clap = { version = "4.5.23", features = ["derive"] }
cached = "0.56.0"
ndarray = "0.17.1"
#ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
nalgebra = "0.34.1"
itertools = "0.14.0"
